someFix, java version 8